<resources>
    <string name="app_name">GroceryGuruApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="login_label">Login</string>
    <string name="createAccount_label">Create Account</string>
    <string name="home_label">Home</string>
    <string name="create_list_label">Create List</string>
    <string name="create_new_list">Create New List</string>
    <string name="createNewList">Create New List</string>
    <string name="createAccount">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">Username</string>
    <string name="Retype_Password">Retype Password</string>
    <string name='return_to_login'>Login</string>
    <string name='on_success_user_create'>User Created Successfully! Return to Login Screen.</string>
    <string name='show_all_users'>Show Users</string>
    <string name='display_users_to_login'>Back To Login</string>
    <string name="to_display_users_page">See Users In DB</string>
    <string name="delete_all_users">Delete All Users</string>
    <string name="product_search_text">Search</string>
    <string name="product_search_icon">Search Icon</string>
    <string name="dev_home_page_header">Developer Home Page</string>
    <string name="dev_create_user_btn_txt">Create Fake Users</string>
    <string name="dev_create_product_btn_txt">Create Grocery Item Objects</string>
    <string name="dev_view_user_lists">View Lists By User</string>
    <string name="dev_page_to_home_btn">Dev Page to Home Button</string>
    <string name="create_grocery_item_name_text">Enter Grocery Item</string>
    <string name="create_grocery_item_category">Select Grocery Category</string>
    <string-array name="grocery_item_categories">
        <item>Meat</item>
        <item>Dairy</item>
        <item>Vegetable</item>
        <item>Fruit</item>
        <item>Bread/Bakery</item>
        <item>Canned/Jarred Good</item>
        <item>Dry/Baking Good</item>
        <item>Frozen Food</item>
    </string-array>
    <string name="grocery_item_prompt">Choose a category</string>
    <string name="create_grocery_item_btn">Submit</string>
    <string name="view_grocery_items">View Grocery Items</string>
    <string name="delete_selected_items">Delete Items</string>
    <string name="create_grocery_list_btn">Create Grocery List</string>
    <string name="car_MPG">Car MPG</string>
    <string name="profile_btn">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_grocery_lists">Delete Grocery Lists</string>
    <string name="show_all_lists">Show All Lists</string>
    <string name="back_to_login">Back To Login</string>
    <string name="view_lists">View Lists</string>
</resources>
