<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateList">


    <EditText
        android:id="@+id/productSearchTextView"
        android:layout_width="192dp"
        android:layout_height="39dp"
        android:layout_marginTop="36dp"
        android:hint="@string/product_search_text"
        android:imeOptions="actionSearch"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="41dp"
        android:layout_height="39dp"
        android:contentDescription="@string/product_search_icon"
        android:src="@android:drawable/ic_menu_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <ListView
        android:id="@+id/itemSearchResultView"
        android:layout_width="415dp"
        android:layout_height="431dp"
        android:choiceMode="singleChoice"
        android:clickable="true"
        android:divider="@android:color/holo_green_dark"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productSearchTextView"
        app:layout_constraintVertical_bias="0.363" />

    <Button
        android:id="@+id/create_grocery_list_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/create_grocery_list_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemSearchResultView" />

</androidx.constraintlayout.widget.ConstraintLayout>